// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemComponent renders correctly in stock screen 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "borderRadius": 5,
      "opacity": 1,
      "padding": 15,
      "paddingLeft": 15,
    }
  }
  testID="ItemComponent.ToucableOpacity"
>
  <Text
    style={
      {
        "color": "#ffffff",
        "fontSize": 15,
      }
    }
  >
    META
  </Text>
</View>
`;

exports[`ItemComponent renders correctly in the currency screen 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "borderRadius": 5,
      "opacity": 1,
      "padding": 15,
      "paddingLeft": 15,
    }
  }
  testID="ItemComponent.ToucableOpacity"
>
  <Text
    style={
      {
        "color": "#ffffff",
        "fontSize": 15,
      }
    }
  >
    EUR/USD
  </Text>
</View>
`;
